0.25.0	UNRELEASED

**PLEASE NOTE**: This release makes quite a lot of changes to public APIs. This
is ahead of a 1.0 release, after which API changes will be kept backwards
compatible.

 * Move greenthreads support to dulwich/contrib.
   This code isn't really developed and only used
   by the swift support.
   (Jelmer Vernooĳ)

 * Move protocol-level peeled tags functions (``serialize_refs()``,
   ``write_info_refs()``, ``split_peeled_refs()``, ``strip_peeled_refs()``)
   from ``dulwich.refs`` to ``dulwich.protocol``. The ``^{}`` peeled tags syntax
   is now properly isolated to protocol-level code. Remove ``InfoRefsContainer``
   class (functionality inlined into ``SwiftInfoRefsContainer``).
   (Jelmer Vernooĳ, #2009)

 * Fix ``get_unstaged_changes()`` to correctly pass Blob objects to filter
   callbacks instead of raw bytes. This fixes crashes when using ``.gitattributes``
   files with filter callbacks like ``checkin_normalize``.
   (Jelmer Vernooĳ, #2010)

 * The ``ObjectID`` and ``Ref`` types are now newtypes, making it harder to
   accidentally pass the wrong type - as notified by mypy. Most of this is in
   lower-level code. (Jelmer Vernooĳ)

 * Implement support for ``core.sharedRepository`` configuration option.
   Repository files and directories now respect shared repository permissions
   for group-writable or world-writable repositories. Affects loose objects,
   pack files, pack indexes, index files, and other git metadata files.
   (Jelmer Vernooĳ, #1804)

 * Optimize status performance by using stat matching to skip reading
   and filtering unchanged files. This provides significant performance
   improvements for repositories with LFS filters, where filter operations can
   be very expensive. The optimization matches Git's behavior of using mtime
   and size comparisons to determine if files need processing.
   (Jelmer Vernooĳ, #1999)

 * Drop support for Python 3.9. (Jelmer Vernooĳ)
